@@ -51,8 +51,13 @@ import org.exolab.castor.xml.XMLFieldHandler;
 
 import java.lang.reflect.Array;
 import java.text.DateFormat;
+import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.util.Calendar;
 import java.util.Date;
+import java.util.GregorianCalendar;
+import java.util.TimeZone;
+import java.util.SimpleTimeZone;
 
 /**
  * A specialized FieldHandler for the XML Schema
@@ -110,10 +115,8 @@ public class DateFieldHandler extends XMLFieldHandler {
 
         if (val == null) return val;
 
-        Object formatted = null;
-
-        DateFormat df = new SimpleDateFormat(DATE_FORMAT);
-
+		Object formatted = null;
+		
         if (val.getClass().isArray()) {
 
             int size = Array.getLength(val);
@@ -122,7 +125,7 @@ public class DateFieldHandler extends XMLFieldHandler {
             for (int i = 0; i < size; i++) {
                 Object obj = Array.get(val, i);
                 if (obj instanceof java.util.Date)
-                    values[i] = df.format( (Date) obj );
+					values[i] = getFormattedDate((Date)obj);
                 else
                     values[i] = obj.toString();
             }
@@ -131,7 +134,7 @@ public class DateFieldHandler extends XMLFieldHandler {
         }
         else {
             if (val instanceof java.util.Date)
-                formatted = df.format( (Date) val);
+                formatted = getFormattedDate((Date)val);
             else
                 formatted = val.toString();
         }
@@ -155,6 +158,12 @@ public class DateFieldHandler extends XMLFieldHandler {
             if ( (value.toString().indexOf(".")) == -1)
                 df = new SimpleDateFormat(DATE_FORMAT_2);
 
+            // Check for XML Schema supported timezone portion
+            TimeZone tz = getTimeZone( value.toString() );
+
+            if ( tz != null ) {
+                df.setTimeZone( tz );
+            }
 
             try {
                 date = df.parse(value.toString());
@@ -212,6 +221,101 @@ public class DateFieldHandler extends XMLFieldHandler {
         return new Date();
     } //-- newInstance
 
+
+    //-------------------/
+    //- Private Methods -/
+    //-------------------/
+
+    /**
+     * Interrogate datetime value for XML Schema Recommendation
+     * compliant timezone.
+     *
+     * Datetime string expected to be one of following formats:
+     *      (i)     yyyy-MM-dd'T'HH:mm:ss'Z'
+     *      (ii)    yyyy-MM-dd'T'HH:mm:ss'+'HH:mm
+     *      (iii)   yyyy-MM-dd'T'HH:mm:ss'-'HH:mm
+     *
+     * @param dateTime The datetime as a String
+     * @return The timezone if found, null otherwise
+     * @throws IllegalStateException datetime contains unsupported timezone or
+     *                               timezone indicator in wrong format
+     */
+    private TimeZone getTimeZone( String dateTime ) throws IllegalStateException {
+        TimeZone tz = null;
+        int pos = -1;
+
+        // First, check for UTC timezone
+        if ( dateTime.indexOf( 'Z' ) != -1 ) {
+            tz = TimeZone.getTimeZone( "UTC" );
+        } else if ( ( pos = dateTime.indexOf( '+' ) ) != -1 ) {
+            // Check that timezone conforms to HH:mm schema format
+            try {
+                Date dt = new SimpleDateFormat( "HH:mm" ).parse( dateTime.substring( pos + 1 ) );
+                Calendar cal = new GregorianCalendar();
+                cal.setTime( dt );
+
+                int offset = ( cal.get( Calendar.HOUR_OF_DAY ) * 60 * 60 * 1000 ) +
+                             ( cal.get( Calendar.MINUTE ) * 60 * 1000 );
+				return new SimpleTimeZone(offset, "UTC");
+				
+            } catch ( ParseException pe ) {
+                throw new IllegalStateException( "Invalid 'timezone' format : should be '+HH:mm'\n" );
+            }
+        } else if ( ( pos = dateTime.lastIndexOf( '-' ) ) != -1 ) {
+            // Check that dash not part of the date ( i.e. must be after the 'T' separator )
+            int posT = dateTime.indexOf( 'T' );
+
+            if ( pos > posT ) {
+                // Check that timezone conforms to HH:mm schema format
+                try {
+                    Date dt = new SimpleDateFormat( "HH:mm" ).parse( dateTime.substring( pos + 1 ) );
+                    Calendar cal = new GregorianCalendar();
+                    cal.setTime( dt );
+
+                    int offset = -1 * ( ( cal.get( Calendar.HOUR_OF_DAY ) * 60 * 60 * 1000 ) +
+                                        ( cal.get( Calendar.MINUTE ) * 60 * 1000 ) );
+					return new SimpleTimeZone(offset, "UTC");
+					
+                } catch ( ParseException pe ) {
+                    throw new IllegalStateException( "Invalid 'timezone' format : should be '-HH:mm'\n" );
+                }
+            }
+        }
+
+        return tz;
+    } //-- getTimeZone
+
+	/**
+	 * Returns the Date formatted as 
+	 *  yyyy-MM-dd'T'HH:mm:ss.SSSZ or
+	 *  yyyy-MM-dd'T'HH:mm:ss.SSS+HH:MM or
+	 *  yyyy-MM-dd'T'HH:mm:ss.SSS-HH:MM
+	 * 
+     * @return The date formatted as an xs:dateTime string (uses default TimeZone)
+	 */
+	private static String getFormattedDate(Date date)
+	{
+		// Retrieve the time zone offset
+		Calendar cal = Calendar.getInstance();
+		cal.setTime(date);
+		int zoneOffset = cal.get(Calendar.ZONE_OFFSET)+cal.get(Calendar.DST_OFFSET);
+		
+		// Format the date
+        DateFormat df = new SimpleDateFormat(DATE_FORMAT);
+		String xmlDate = df.format( date );
+		if (zoneOffset==0)
+			return xmlDate+"Z";		
+		
+		// Format the time zone offset
+		String tz = (zoneOffset<0) ? "-" : "+";
+		zoneOffset = Math.abs(zoneOffset);
+		short zhour = (short) (zoneOffset / (60*60*1000));
+		zoneOffset = zoneOffset % (60*60*1000);
+		short zmin = (short)(zoneOffset / (60*1000));
+		tz+= (zhour<10 ? "0"+zhour : ""+zhour) + ":" + (zmin<10 ? "0"+zmin : ""+zmin);		
+		return xmlDate+tz;		
+		
+	} //-- getFormattedDate
 
 } //-- DateFieldHandler
 
